--- a/sass/content/_table.scss
+++ b/sass/content/_table.scss
@@ -1,51 +1,56 @@
 @import '../component/variable';
 @import '../component/group-mxin';
 
-.table-container {
+/* Pictures-clinic */
+
+*{
+    text-decoration: none
+}
+.Pictures-clinic{
+    @include centered;
+    height: 40vh;
+    margin-top: 50px;
+}
+.Pictures{
+    display: flex;
+    justify-content: flex-end;
+    flex: 1;
+}
+.Paragraph{
+    flex: 1;
+    p{
+        width: 50%;
+        margin-top: 25px;
+    }
+}
+
+/* table */
+
+.table-container{
     @include centered;
     flex-direction: column;
+    margin-top: -30px;
     height: 100vh;
     width: 100%;
-    background: $mainColor;
-
-    table {
-        border-collapse: collapse;
-        text-align: center;
-        margin-top: 20px;
-        height: 60vh;
-        width: 90%;
-        background: $primaryColor;
-
-        thead {
-            height: 10vh;
-            background: $primaryColor;
-        }
-    }
-    h1 {
-        color: $seconaryColor;
-    }
-}
-table,
-th,
-td {
-    border: 1px solid $tablecolorblack;
-    .color {
-        color: $tablecolor;
-    }
-}
-
-@media(max-width: 700px){
-    table{
-        height: 70vh;
-        width: 95%;    
-    }
-    tr > th{
-        font-size: 8px;
-    }    
-    tr > td{
-        font-size: 10px;
-    }
     h1{
-        font-size: 20px;
-    }
+        color: $seconaryColor;
+    }  
+    .color{
+        color: $tablecolor;
+    }   
+}
+thead{ 
+    height: 10vh;
+    background: $primaryColor;  
+}
+table{
+    border-collapse: collapse;
+    text-align: center;
+    margin-top: 20px;
+    height: 60vh;
+    width: 90%;    
+    background: $mainColor;
+}
+table, th, td {
+    border: 1px solid $tablecolorblack;
 }
